Fix for navigational issue in dark mode

--- a/_sass/_dark-mode.scss
+++ b/_sass/_dark-mode.scss
@@ -14,7 +14,8 @@
         color: #fff;
 
         &:hover {
-            background: #3e3e3e;
+            background: #fff;
+            color: #1D1D1D;
         }
     }
 
